Removed some extraneous css, fixed pages for 12 columns

--- a/order.html
+++ b/order.html
@@ -58,21 +58,21 @@ AND Glen Cheng-->
           Here we are actually using our 10-column grid to 
           position navigation across the top accordingly
           -->  
-          <div class="col-2of10 navitem">
+          <div class="col-3 navitem">
             <a class="navigation" href="index.html">Home</a>
           </div>
-          <div class="col-2of10 navitem">
+          <div class="col-3 navitem">
             <a class="navigation" href="products.html">Products</a>
           </div>
           <!--temporary removed
-          <div class="col-2of10 navitem">
+          <div class="col-3 navitem">
             <a class="navigation" href="#"></a>
           </div>
            -->
-          <div class="col-2of10 navitem">
+          <div class="col-3 navitem">
             <a class="navigation" href="order.html">Order</a>
           </div>
-          <div class="col-2of10 navitem">
+          <div class="col-3 navitem">
             <a class="navigation" href="contact.html">Contact</a>
           </div>
         </nav>
@@ -83,7 +83,7 @@ AND Glen Cheng-->
         This is the first column
     -->    
 <div class="grid"> <!-- Starting a different grid -->
-    
+    <div class="col-12">
     <h2 class="title">Title</h2>
 
         <form method="post" class="form" action="#">
@@ -92,52 +92,52 @@ AND Glen Cheng-->
           <div class="input-wrapper">
         -->
           <div class="grid">
-            <div class="col-3of10">
+            <div class="col-3">
               <label class="form" for="form-name">First Name:</label>
               <input class="form" type="text" id="form-name" placeholder="John">
             </div>
-            <div class="col-3of10">
+            <div class="col-3">
               <label class="form" for="form-name">Last Name:</label>
               <input class="form" type="text" id="form-name" placeholder="Doe">
             </div>
           </div>
           
         <div class="grid">
-          <div class="col-7of10">
+          <div class="col-7">
             <label class="form" for="form-name">Address</label>
               <input class="form" type="text" id="form-name" placeholder="Mary Street">
           </div>
         </div>
         <div class="grid">
-          <div class="col-7of10">
+          <div class="col-7">
             <label class="form" for="form-name">Phone</label>
               <input class="form" type="text" id="form-name" placeholder="xxx-xxx-xxxx">
         </div>
 
         </div>
         <div class="grid">
-          <div class="col-7of10">
+          <div class="col-7">
             <label class="form" for="form-name">Email</label>
               <input class="form" type="text" id="form-name" placeholder="Johnny@somewhere.com">
         </div>
 
         </div>
         <div class="grid">
-            <div class="col-imgOrderof10">
+            <div class="col-2">
           <figure>
             <img width="150" height="100" alt="Payment1" src="">
             <figcaption></figcaption>
           </figure>
 
           </div>
-        <div class="col-imgOrderof10">
+        <div class="col-2">
           <figure>
             <img width="150" height="100" alt="Payment2" src="">
             <figcaption></figcaption>
           </figure>
 
           </div>
-          <div class="col-imgOrderof10">
+          <div class="col-2">
           <figure>
             <img width="150" height="100" alt="Payment3" src="">
             <figcaption></figcaption>
@@ -150,7 +150,7 @@ AND Glen Cheng-->
         -->
 
           <div class="grid">
-            <div class="col-8of10">
+            <div class="col-10">
               <textarea class="form" id="form-comment" placeholder="Please place your comment here"></textarea>
             </div>
           </div>
@@ -161,7 +161,7 @@ AND Glen Cheng-->
 </div>
 
       </form>
-
+</div>
 </div>
 
 
