--- a/products.html
+++ b/products.html
@@ -56,21 +56,21 @@
         Here we are actually using our 10-column grid to 
         position navigation across the top accordingly
       -->  
-      <div class="col-2of10 navitem">
+      <div class="col-3 navitem">
         <a class="navigation " href="index.html">Home</a>
       </div>
-      <div class="col-2of10 navitem">
+      <div class="col-3 navitem">
         <a class="navigation" href="products.html">Products</a>
       </div>
         <!--temporary removed
-        <div class="col-2of10">
+        <div class="col-3">
           <a class="navigation" href="#"></a>
         </div>
       -->
-      <div class="col-2of10 navitem">
+      <div class="col-3 navitem">
         <a class="navigation" href="order.html">Order</a>
       </div>
-      <div class="col-2of10 navitem">
+      <div class="col-3 navitem">
         <a class="navigation" href="contact.html">Contact</a>
       </div>
     </nav>
@@ -81,7 +81,7 @@
       This is the first column
     -->    
     <div class="grid"> <!-- Starting a different grid -->
-      <div class="col-2of10 thumbnail">
+      <div class="col-2 thumbnail">
         <figure>
           <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
           <figcaption>Vanilla (Flavour)</figcaption>
@@ -89,7 +89,7 @@
 
       </div>
 
-      <div class="col-2of10 thumbnail">
+      <div class="col-2 thumbnail">
         <figure>
           <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
           <figcaption>Vanilla (Flavour)</figcaption>
@@ -97,7 +97,7 @@
 
       </div>
 
-      <div class="col-2of10 thumbnail">
+      <div class="col-2 thumbnail">
         <figure>
           <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
           <figcaption>Vanilla (Flavour)</figcaption>
@@ -105,7 +105,7 @@
 
       </div>
 
-      <div class="col-2of10 thumbnail">
+      <div class="col-2 thumbnail">
         <figure>
           <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
           <figcaption>Vanilla (Flavour)</figcaption>
@@ -113,7 +113,7 @@
 
       </div>
 
-      <div class="col-2of10 thumbnail">
+      <div class="col-2 thumbnail">
         <figure>
           <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
           <figcaption>Vanilla (Flavour)</figcaption>
@@ -121,7 +121,7 @@
 
       </div>
 
-      <div class="col-2of10 thumbnail">
+      <div class="col-2 thumbnail">
         <figure>
           <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
           <figcaption>Vanilla (Flavour)</figcaption>
