Added overlay links (tentative colours)

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div class="grid">
       <figure>
-        <img class="logo" height="300" alt="LOGO" src="">
+        <img class="logo" alt="LOGO" src="">
         <figcaption></figcaption>
       </figure>
     </div>
