--- a/products.html
+++ b/products.html
@@ -82,9 +82,20 @@
     -->    
     <div class="grid"> <!-- Starting a different grid -->
       <div class="col-2 thumbnail">
+       
+          <figure>
+            <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
+            <figcaption>Vanilla (Flavour)</figcaption>
+             <a href="#"><div class="overlay"></div></a>
+          </figure>
+        <!--  -->
+      </div>
+
+      <div class="col-2 thumbnail">
         <figure>
           <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
           <figcaption>Vanilla (Flavour)</figcaption>
+           <a href="#"><div class="overlay"></div></a>
         </figure>
 
       </div>
@@ -93,6 +104,7 @@
         <figure>
           <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
           <figcaption>Vanilla (Flavour)</figcaption>
+           <a href="#"><div class="overlay"></div></a>
         </figure>
 
       </div>
@@ -101,6 +113,7 @@
         <figure>
           <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
           <figcaption>Vanilla (Flavour)</figcaption>
+           <a href="#"><div class="overlay"></div></a>
         </figure>
 
       </div>
@@ -109,6 +122,7 @@
         <figure>
           <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
           <figcaption>Vanilla (Flavour)</figcaption>
+           <a href="#"><div class="overlay"></div></a>
         </figure>
 
       </div>
@@ -117,14 +131,7 @@
         <figure>
           <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
           <figcaption>Vanilla (Flavour)</figcaption>
-        </figure>
-
-      </div>
-
-      <div class="col-2 thumbnail">
-        <figure>
-          <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
-          <figcaption>Vanilla (Flavour)</figcaption>
+           <a href="#"><div class="overlay"></div></a>
         </figure>
 
       </div>
