Added placeholder product page

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@ AND Glen Cheng-->
 
   <div class="grid">
           <figure>
-            <img width="300" height="300" alt="Logo" src="">
+            <img class="logo" alt="Logo" src="">
             <figcaption></figcaption>
           </figure>
   </div>
