--- a/order.html
+++ b/order.html
@@ -40,7 +40,7 @@ AND Glen Cheng-->
 
   <div class="grid">
           <figure>
-            <img width="300" height="300" alt="Logo" src="">
+            <img class="logo" alt="Logo" src="">
             <figcaption></figcaption>
           </figure>
   </div>
@@ -125,21 +125,21 @@ AND Glen Cheng-->
         <div class="grid">
             <div class="col-2">
           <figure>
-            <img width="150" height="100" alt="Payment1" src="">
+            <img width="150" height="100" alt="Payment1" src="http://placehold.it/150x100">
             <figcaption></figcaption>
           </figure>
 
           </div>
         <div class="col-2">
           <figure>
-            <img width="150" height="100" alt="Payment2" src="">
+            <img width="150" height="100" alt="Payment2" src="http://placehold.it/150x100">
             <figcaption></figcaption>
           </figure>
 
           </div>
           <div class="col-2">
           <figure>
-            <img width="150" height="100" alt="Payment3" src="">
+            <img width="150" height="100" alt="Payment3" src="http://placehold.it/150x100">
             <figcaption></figcaption>
           </figure>
 
