--- a/products.html
+++ b/products.html
@@ -38,7 +38,7 @@
 
     <div class="grid">
       <figure>
-        <img width="300" height="300" alt="Logo" src="">
+        <img class="logo" alt="Logo" src="">
         <figcaption>Logo</figcaption>
       </figure>
     </div>
@@ -51,7 +51,6 @@
       to allow it to act as a grid of it's own
     -->
     <nav class="grid">
-
         <!-- 
         Here we are actually using our 10-column grid to 
         position navigation across the top accordingly
@@ -81,12 +80,16 @@
       This is the first column
     -->    
     <div class="grid"> <!-- Starting a different grid -->
+      <div class="col-12">
+        <h3>Flavours</h3>
+      </div>
+
       <div class="col-2 thumbnail">
        
           <figure>
             <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
             <figcaption>Vanilla (Flavour)</figcaption>
-             <a href="#"><div class="overlay"></div></a>
+             <a href="product_vanilla.html"><div class="overlay"></div></a>
           </figure>
         <!--  -->
       </div>
@@ -131,6 +134,65 @@
         <figure>
           <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
           <figcaption>Vanilla (Flavour)</figcaption>
+           <a href="#"><div class="overlay"></div></a>
+        </figure>
+
+      </div>
+
+      <div class="col-12">
+        <h3>Types</h3>
+      </div>
+
+      <div class="col-2 thumbnail">
+       
+          <figure>
+            <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
+            <figcaption>Cone</figcaption>
+             <a href="#"><div class="overlay"></div></a>
+          </figure>
+        <!--  -->
+      </div>
+
+      <div class="col-2 thumbnail">
+        <figure>
+          <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
+          <figcaption>Cone</figcaption>
+           <a href="#"><div class="overlay"></div></a>
+        </figure>
+
+      </div>
+
+      <div class="col-2 thumbnail">
+        <figure>
+          <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
+          <figcaption>Cone</figcaption>
+           <a href="#"><div class="overlay"></div></a>
+        </figure>
+
+      </div>
+
+      <div class="col-2 thumbnail">
+        <figure>
+          <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
+          <figcaption>Cone</figcaption>
+           <a href="#"><div class="overlay"></div></a>
+        </figure>
+
+      </div>
+
+      <div class="col-2 thumbnail">
+        <figure>
+          <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
+          <figcaption>Cone</figcaption>
+           <a href="#"><div class="overlay"></div></a>
+        </figure>
+
+      </div>
+
+      <div class="col-2 thumbnail">
+        <figure>
+          <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
+          <figcaption>Cone</figcaption>
            <a href="#"><div class="overlay"></div></a>
         </figure>
 
