Changed nav styling, background colour, and general layout adjustments

--- a/index.html
+++ b/index.html
@@ -35,34 +35,29 @@
 
     <!--DON DON's FROZEN DELIGHTS LOGO-->
       <section id="keygroup">
-      <!-- 
-        added the class 'grid' to our nav tag
-        to allow it to act as a grid of it's own
-      -->
-
-
-<!--This is where LOGO AND NAV ARE LOCATED-->
-<nav class="grid">
-       <div class="col-2o4">
-          <figure>
-        <img class="logo" alt="Don Don's Frozen Delights" src="img/Logo.jpg">
-        <figcaption></figcaption>
-          </figure>
+      <!--This is where LOGO AND NAV ARE LOCATED-->
+      <nav class="grid">
+         <div class="col-3">
+          <img class="logo" alt="Don Don's Frozen Delights" src="img/Logo.png">
           </div>
-          <div class="col-2o4 navitem">
+          <div class="col-1">
+            &nbsp;
+            <!-- <a class="navigation" href="index.html">Home</a> -->
+          </div>
+          <div class="col-2 navitem">
             <a class="navigation" href="index.html">Home</a>
           </div>
-          <div class="col-2o4 navitem">
+          <div class="col-2 navitem">
             <a class="navigation" href="products.html">Products</a>
           </div>
-          <div class="col-2o4 navitem special">
+          <div class="col-2 navitem special">
               <a class="navigation orderHere" href="order.html">Order</a>
             </div>
-            <div class="col-2o4 navitem">
+            <div class="col-2 navitem">
               <a class="navigation" href="contact.html">Contact</a>
             </div>
            
-          </div>
+          </nav>
         
       </section>    
 
@@ -75,19 +70,18 @@
         <div class="col-9">
           <article id="mainEvent">
 
-            <div class="grid">
+
               <figure>
-                <img class="mainEvent"  height="250" alt="Buko Salad Special!" src="img/bukosalad.jpg">
+                <img class="mainEvent"  style="width:100%" alt="Buko Salad Special!" src="img/bukosalad.jpg">
                 <figcaption></figcaption>
               </figure>
 
 
               <h2 class="title">Best Selling Ice Cream</h2>
 
-              <p>Try our bestselling ice cream that many Filipinos have tasted and liked. The <em>Buko Sala</em> will fill your mouth
-              with its taste of creamy coconut milk inside its chocolate shell.</p>
+              <p>Try our bestselling ice cream that many Filipinos have tasted and liked. The <em>Buko Salad</em> will fill your mouth with its taste of creamy coconut milk inside its chocolate shell.</p>
 
-            </div>
+
           </article>
         </div>
 
@@ -98,13 +92,6 @@
       <div class="col-3">
         <article id="sideEvent">
 
-
-<!--
-          <figure>
-            <img width="599" height="472" alt="A puppy" src="img/dog.jpg">
-            <figcaption>So much cuter, and less deadly</figcaption>
-          </figure>
-        -->
         <h3 class="sideTitle">New BETA FOOD, Inc. Contact Numbers </h3>
         <h6 class="date">( Feb. 21 , 2015 )</h6>
 
@@ -138,8 +125,6 @@
 
     </div>
   </div>
-
-<!--footer-->
 
   <section id="footer">
     <p class="copyright">Copyright 2015 Don Don's Frozen Delights. All rights reserved.</p>
