--- a/contact.html
+++ b/contact.html
@@ -35,34 +35,29 @@ AND Glen Cheng-->
 
      <!--DON DON's FROZEN DELIGHTS LOGO-->
       <section id="keygroup">
-      <!-- 
-        added the class 'grid' to our nav tag
-        to allow it to act as a grid of it's own
-      -->
-
-
-<!--This is where LOGO AND NAV ARE LOCATED-->
-<nav class="grid">
-       <div class="col-2o4">
-          <figure>
-        <img class="logo" alt="Don Don's Frozen Delights" src="img/Logo.jpg">
-        <figcaption></figcaption>
-          </figure>
+      <!--This is where LOGO AND NAV ARE LOCATED-->
+      <nav class="grid">
+         <div class="col-3">
+          <img class="logo" alt="Don Don's Frozen Delights" src="img/Logo.png">
           </div>
-          <div class="col-2o4 navitem">
+          <div class="col-1">
+            &nbsp;
+            <!-- <a class="navigation" href="index.html">Home</a> -->
+          </div>
+          <div class="col-2 navitem">
             <a class="navigation" href="index.html">Home</a>
           </div>
-          <div class="col-2o4 navitem">
+          <div class="col-2 navitem">
             <a class="navigation" href="products.html">Products</a>
           </div>
-          <div class="col-2o4 navitem special">
+          <div class="col-2 navitem special">
               <a class="navigation orderHere" href="order.html">Order</a>
             </div>
-            <div class="col-2o4 navitem">
+            <div class="col-2 navitem">
               <a class="navigation" href="contact.html">Contact</a>
             </div>
            
-          </div>
+          </nav>
         
       </section>    
 
@@ -101,10 +96,7 @@ AND Glen Cheng-->
     </div>
 
    <div class="col-6">
-            <figure>
-            <img width="550" height="300" alt="Google Map" src="">
-            <figcaption></figcaption>
-          </figure>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1913.5698235009122!2d120.61214939999999!3d16.417732599999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3391a156fc6d1447%3A0x34b3184575ede4c6!2sSunflower%2C+Baguio%2C+Benguet%2C+Philippines!5e0!3m2!1sen!2sca!4v1425339082715" width="100%" height="300px" frameborder="0" style="border:0"></iframe>
    </div>
 </div>
 
