Order page image fixes

--- a/order.html
+++ b/order.html
@@ -249,11 +249,11 @@ AND Glen Cheng-->
               <div class="input-wrapper">
             -->
               <div class="grid">
-                <div class="col-3">
+                <div class="col-6">
                   <label class="form" for="form-name">First Name:</label>
                   <input class="form" type="text" id="form-name" placeholder="John">
                 </div>
-                <div class="col-3">
+                <div class="col-6">
                   <label class="form" for="form-name">Last Name:</label>
                   <input class="form" type="text" id="form-name" placeholder="Doe">
                 </div>
@@ -280,23 +280,23 @@ AND Glen Cheng-->
 
             </div>
             <div class="grid">
-                <div class="col-2">
+                <div class="col-4">
               <figure>
-                <img width="150" height="100" alt="Payment1" src="img/paypal.png">
+                <img width="100%" alt="Payment1" src="img/paypal.png">
                 <figcaption></figcaption>
               </figure>
 
               </div>
-            <div class="col-2">
+            <div class="col-4">
               <figure>
-                <img width="150" height="100" alt="Payment2" src="img/MasterCard.png">
+                <img width="100%" alt="Payment2" src="img/MasterCard.png">
                 <figcaption></figcaption>
               </figure>
 
               </div>
-              <div class="col-2">
+              <div class="col-4">
               <figure>
-                <img width="150" height="100" alt="Payment3" src="img/Visa.png">
+                <img width="100%" alt="Payment3" src="img/Visa.png">
                 <figcaption></figcaption>
               </figure>
 
