--- a/index.html
+++ b/index.html
@@ -70,12 +70,15 @@
         <div class="col-9">
           <article id="mainEvent">
 
+              <picture>
+                <source class="mainEvent" media="(min-width: 40em)" srcset="img/buko-salad_big.jpg 1x">
+                <source 
+                srcset="img/buko-salad_small.jpg 1x"> 
 
-              <figure>
-                <img class="mainEvent"  style="width:100%" alt="Buko Salad Special!" src="img/bukosalad.jpg">
-                <figcaption></figcaption>
-              </figure>
-
+                <img class="mainEvent"
+                src="img/buko-salad_big.jpg" 
+                alt="Buko Salad Special banner">     
+              </picture>
 
               <h2 class="title">Best Selling Ice Cream</h2>
 
@@ -96,26 +99,23 @@
         <h6 class="date">( Feb. 21 , 2015 )</h6>
 
         <p class="sideNote">We have added new contact information for those living in Greater Manila Area to ask for customer service.</p>
-
+        
+        <p class="sideNote"><a href="#">Read more</a></p>
+<!-- 
         <p class="sideNote">New contact information:</p>
 
         <ul>
               <li class="sideNote">372 9104</li>
               <li class="sideNote">373 4192</li>
               <li class="sideNote">294 6724</li>
-        </ul>
+        </ul> -->
 
-          <!--
-          <figure>
-            <img width="599" height="472" alt="A puppy" src="img/dog.jpg">
-            <figcaption>So much cuter, and less deadly</figcaption>
-          </figure>
-        -->
         <h3 class="sideTitle">Don Don's Frozen Delight's Website</h3>
         <h6 class="date">( Jan. 2 , 2015 )</h6>
 
         <p class="sideNote">We finally have a website! We hope to bring the best of our ice cream and to better serve our customers online.</p>
-
+        
+        <p class="sideNote"><a href="#">Read more</a></p>
 
 
       </article>
@@ -127,7 +127,6 @@
   </div>
 
   <section id="footer">
-    <hr>
     <p class="copyright">Copyright 2015 Don Don's Frozen Delights. All rights reserved.</p>
   </section>
 
