Created new html file called order_confirmation. It includes a confirmation that the process went through and is recommending other items.

--- a/order.html
+++ b/order.html
@@ -417,7 +417,7 @@ AND Glen Cheng-->
             </div>
 
 
-            <input class="form-submit" type="submit" value="Process Order">
+            <input class="form-submit" type="submit" value="Process Order" href="order_confirmation.html">
         </div> <!--col 12-->
 
           </form>
