Edited order page and navbar, cleaned up logo placement and slight edits to footer

--- a/product_vanilla.html
+++ b/product_vanilla.html
@@ -64,14 +64,10 @@
 
     <div class="grid">
 
-      <div class="col-3 thumbnail">
-       
-          <figure>
-            <img  alt="Product Image" src="img/vanilla-stick.jpg">
-            <figcaption>Vanilla</figcaption>
-             <a href="#"><div class="overlay"></div></a>
-          </figure>
-        <!--  -->
+      <div class="col-3 productimage">
+        <figure>
+          <img  alt="Product Image" src="img/vanilla-stick.jpg">
+        </figure>
       </div>
 
       <div class="col-9">
@@ -79,7 +75,7 @@
       	<p>The fantasticly simple, yet oh so tasty vanilla is a staple of our shop. Not sure what to get? Just choose vanilla and enjoy this simple yet nice taste.</p>
       </div>
       <div class="col-2">
-      	<input class="form-submit" type="submit" value="Place order">
+      	<input class="form-submit" type="submit" value="Place order" onClick="location='order.html'">
       </div>
 
     </div>
