Revamped the individual product page

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@ AND Glen Cheng-->
     -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Order</title>
+    <title>Don Don's Frozen Delights - Contact Us</title>
 
     <link href="css/normalize.css" rel="stylesheet" >
 
