--- a/order_confirmation.html
+++ b/order_confirmation.html
@@ -17,7 +17,7 @@ AND Glen Cheng-->
     -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Order Confirmed</title>
+    <title>Don Don's Frozen Delights - Order Confirmed</title>
 
     <link href="css/normalize.css" rel="stylesheet" >
 
@@ -93,7 +93,7 @@ AND Glen Cheng-->
           <figure>
             <img alt="Product Image" src="img/cheese.jpg">
             <figcaption>Cheese</figcaption>
-             <a href="#"><div class="overlay"></div></a>
+             <a href="product_vanilla.html"><div class="overlay"></div></a>
           </figure>
         </div>
 
@@ -101,7 +101,7 @@ AND Glen Cheng-->
           <figure>
             <img alt="Product Image" src="img/melon.jpg">
             <figcaption>Melon</figcaption>
-             <a href="#"><div class="overlay"></div></a>
+             <a href="product_vanilla.html"><div class="overlay"></div></a>
           </figure>
         </div> 
 
@@ -109,7 +109,7 @@ AND Glen Cheng-->
           <figure>
             <img alt="Product Image" src="img/pandan-stick.jpg">
             <figcaption>Pandan Stick</figcaption>
-             <a href="#"><div class="overlay"></div></a>
+             <a href="product_vanilla.html"><div class="overlay"></div></a>
           </figure>
         </div> 
 
