--- a/product_vanilla.html
+++ b/product_vanilla.html
@@ -17,7 +17,7 @@
 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Homepage</title>
+    <title>Don Don's Frozen Delights - Vanilla</title>
 
     <link href="css/normalize.css" rel="stylesheet" >
 
@@ -71,13 +71,76 @@
       </div>
 
       <div class="col-9">
-      	<h3>Vanilla Stick</h3>
-      	<p>The fantasticly simple, yet oh so tasty vanilla is a staple of our shop. Not sure what to get? Just choose vanilla and enjoy this simple yet nice taste.</p>
-      </div>
-      <div class="col-2">
-      	<input class="form-submit" type="submit" value="Place order" onClick="location='order.html'">
+      	<h3>Vanilla</h3>
+      	<p>The fantasticly simple, yet oh so tasty vanilla is a staple of any good ice cream shop. Not sure what to get? Just choose vanilla and enjoy this simple yet nice taste.</p>
       </div>
 
+    </div>
+
+    <div class="grid productvariety">
+      <div class="col-12">
+        <h4>Offered in these varieties: </h3>
+      </div>
+      <div class="col-2 thumbnail">
+        <figure>
+          <img width="300" height="300" alt="Product Image" src="img/drumstick.jpg">
+          <a href="#"><div class="overlay">
+            <figcaption>Drumstick</figcaption>
+          </div></a>
+        </figure>
+        <a class="button" href="order.html">Order</a>
+      </div>
+
+      <div class="col-2 thumbnail">
+        <figure>
+          <img width="300" height="300" alt="Product Image" src="img/pint.jpg">
+          <a href="#"><div class="overlay">
+            <figcaption>Cone</figcaption>
+          </div></a>
+        </figure>
+        <a class="button" href="order.html">Order</a>
+      </div>
+
+      <div class="col-2 thumbnail">
+        <figure>
+          <img width="300" height="300" alt="Product Image" src="img/half-gallon.jpg">
+          <a href="#"><div class="overlay">
+            <figcaption>Half-Gallon</figcaption>
+          </div></a>
+        </figure>
+        <a class="button" href="order.html">Order</a>
+      </div>
+
+      <div class="col-2 thumbnail">
+        <figure>
+          <img width="300" height="300" alt="Product Image" src="img/1litre.jpg">
+          <a href="#"><div class="overlay">
+            <figcaption>One Litre</figcaption>
+          </div></a>
+        </figure>
+        <a class="button" href="order.html">Order</a>
+      </div>
+
+      <div class="col-2 thumbnail">
+        <figure>
+          <img width="300" height="300" alt="Product Image" src="img/premium-cup.jpg">
+          
+          <a href="#"><div class="overlay">
+            <figcaption>Premium Cup</figcaption>
+          </div></a>
+        </figure>
+        <a class="button" href="order.html">Order</a>
+      </div>
+
+      <div class="col-2 thumbnail">
+        <figure>
+          <img width="300" height="300" alt="Product Image" src="img/icecream-stick.jpg">
+          <a href="#"><div class="overlay">
+            <figcaption>Ice Cream Stick</figcaption>
+          </div></a>
+        </figure>
+        <a class="button" href="order.html">Order</a>
+      </div>
     </div>
 
   </body>
