--- a/products.html
+++ b/products.html
@@ -17,7 +17,7 @@
 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Homepage</title>
+    <title>Don Don's Frozen Delights - Our Products</title>
 
     <link href="css/normalize.css" rel="stylesheet" >
 
